# Sponzey-Fleet

./: .gitignore  AGENTS.md  Cargo.toml  PROJECT.md  README.ko.md  README.md  RESEARCH.md  package.json
.github/workflows/: npm-release.yml
.tasks/: plan.md  task001.md  task002.md  task003.md  task005.md
.tasks/phase001/: plan.md  task001.md  task002.md  task003.md  task004.md  task005.md  task006.md  task007.md  task008.md  task009.md  task010.md  task011.md  task012.md  task013.md
.tasks/phase002/: plan.md  task001.md  task002.md  task004.md  task006.md  task007.md  task008.md  task009.md
crates/fleet-agent/: Cargo.toml
crates/fleet-agent/src/: lib.rs
crates/fleet-application/: Cargo.toml
crates/fleet-application/src/: lib.rs
crates/fleet-cli/: Cargo.toml
crates/fleet-cli/src/: lib.rs  main.rs
crates/fleet-controller/: Cargo.toml
crates/fleet-controller/src/: lib.rs
crates/fleet-core/: Cargo.toml
crates/fleet-core/src/: id.rs  identity.rs  lib.rs  logging.rs  redaction.rs  settings.rs
crates/fleet-domain/: Cargo.toml
crates/fleet-domain/src/: agent.rs  audit.rs  job.rs  lib.rs  policy.rs  runbook.rs  selector.rs
crates/fleet-protocol/: Cargo.toml
crates/fleet-protocol/src/: lib.rs
crates/fleet-runner/: Cargo.toml
crates/fleet-runner/src/: lib.rs
crates/fleet-store/: Cargo.toml
crates/fleet-store/src/: lib.rs
docs/: api.md  architecture.md  configuration.md  logging.md  logs.md  openapi.json  protocol.md  release-notes-mvp.md  release-notes-phase002-template.md  retention.md  runbooks.md  security-checklist.md  service-install.md  swagger-ui.html
examples/policies/: nginx-running.yml
examples/runbooks/: nginx-basic.yml
npm/fleet/: README.md  package.json
npm/fleet-darwin-arm64/: README.md  package.json
npm/fleet-darwin-x64/: README.md  package.json
npm/fleet-linux-arm64/: README.md  package.json
npm/fleet-linux-x64/: README.md  package.json
npm/fleet/scripts/: check-bin.js  check-platform-packages.js  check-version.js  postinstall.js
scripts/: check_linux_glibc_baseline.sh  hardening_audit.sh  manual_linux_nginx_runbook_smoke.sh  manual_npm_registry_smoke.sh  manual_systemd_reboot_smoke.sh  npm_demo_smoke.sh  npm_local_pack_smoke.sh  npm_platform_local_install_smoke.sh  npm_publish_current_platform.sh  npm_stage_current_platform.sh  release_readiness_gate.sh  run_agent.sh  run_controller.sh  smoke_mvp.sh  smoke_remote_tls_loopback.sh
web-admin/: api-client.js  api.schema.json  app.js  index.html  package.json  styles.css  tsconfig.json
web-admin/scripts/: build.js  test.js  typecheck.js
