[workspace]
members = [
    "crates/fleet-core",
    "crates/fleet-domain",
    "crates/fleet-application",
    "crates/fleet-protocol",
    "crates/fleet-store",
    "crates/fleet-runner",
    "crates/fleet-controller",
    "crates/fleet-agent",
    "crates/fleet-cli",
]
resolver = "3"

[workspace.package]
version = "0.1.11"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/sponzey/fleet"

[workspace.dependencies]
axum = { version = "0.8", features = ["ws"] }
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
ed25519-dalek = "2"
getrandom = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rustls-pemfile = "2"
tokio = { version = "1", features = ["net", "rt-multi-thread", "time"] }
tokio-rustls = "0.26"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
