[package]
name = "fleet-controller"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum = { workspace = true }
fleet-core = { path = "../fleet-core" }
fleet-application = { path = "../fleet-application" }
fleet-domain = { path = "../fleet-domain" }
fleet-protocol = { path = "../fleet-protocol" }
fleet-store = { path = "../fleet-store" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
rustls-pemfile = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rcgen = "0.12"
reqwest = { workspace = true }
