[package]
name = "fleet-store"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fleet-application = { path = "../fleet-application" }
fleet-domain = { path = "../fleet-domain" }
rusqlite = { workspace = true }
serde_json = { workspace = true }
